blocks/styles.css
@import '@tylertech/forge/dist/forge-core.css';
@import '@tylertech/forge/dist/forge.css';

@import 'tailwindcss';
@import '@tylertech/forge-tailwind';

/* Block specific utilities */
@layer components {
  .striped-box {
    @apply rounded-lg p-4 border text-lowest dark:text-medium-inverse bg-[size:8px_8px] bg-top-left bg-[image:repeating-linear-gradient(315deg,currentColor_0,currentColor_1px,transparent_0,transparent_50%)];
  }

  .gradient-bg {
    @apply bg-linear-to-b from-(--forge-theme-primary-container-minimum) to-(--forge-theme-primary-container);
  }

  .grid > * {
    @apply min-h-0 min-w-0;
  }

  forge-card.p-0 {
    --forge-card-padding: 0;
  }

  forge-card.p-6 {
    --forge-card-padding: var(--forge-spacing-large);
  }
}

